test/performance/qps_test/config/cilium_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "fortio-server-ingress"
spec:
  endpointSelector:
    matchLabels:
      app: fortio-server
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: fortio-client
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/"
        - method: "POST"
          path: "/"
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "nginx-client-egress"
spec:
  endpointSelector:
    matchLabels:
      app: fortio-client
  egress:
  - toEndpoints:
    - matchLabels:
        app: fortio-server
    toPorts:
      - ports:
        - port: "8080"
          protocol: TCP
        rules:
          http:
          - method: "GET"
            path: "/"
          - method: "POST"
            path: "/"
