test/performance/qps_test/config/fortio-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-client
  template:
    metadata:
      annotations:
        sidecar.istio.io/proxyImage: "istio/proxyv2:1.28.2"
        status.sidecar.istio.io/port: "0"
        proxy.istio.io/config: "{concurrency: 48}"
        sidecar.istio.io/proxyCPU: "1m" 
        sidecar.istio.io/proxyiMemory: "1Mi"
      labels:
        app: fortio-client
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-node1
      containers:
        - image: fortio/fortio
          imagePullPolicy: IfNotPresent
          name: fortio-client
          ports:
            - containerPort: 8080
          resources:
            #limits:
            #  cpu: 1
            #  memory: 1024Mi
            requests:
              cpu: 1m
              memory: 1Mi
